--- a/libs/configuration_app/templates/manual_ssid_entry.html
+++ b/libs/configuration_app/templates/manual_ssid_entry.html
@@ -2,15 +2,15 @@
 
 {% block body %}
   <div id="mainContent">
-    <h1>WiFi Setup</h1>
+    <h1>Bilir Kablosuz Ağ Kurulumu</h1>
     <div class="wifiIcon"></div>
 
     <form action="{{ url_for('save_credentials') }}" method=post>
       <ul>
-        <li><label for="ssid">Enter your network SSID:</label></li>
+        <li><label for="ssid">Kablosuz ağ adını giriniz:</label></li>
         <li><input type="text" name="ssid", class="wifiNetworkInputs"></li>
 
-        <li><label for="wifi_key">Your Wifi password</label></li>
+        <li><label for="wifi_key">Kablosuz ağ şifrenizi giriniz</label></li>
         <li><input type="password" name="wifi_key", class="wifiNetworkInputs"></li>
 
         <input type="submit", class="wifiConnectButton">
