--- a/libs/configuration_app/templates/save_credentials.html
+++ b/libs/configuration_app/templates/save_credentials.html
@@ -2,8 +2,8 @@
 
 {% block body %}
   <div id="saveCredentialsOutput">
-    <p>Wifi connection configured for:</p>
+    <p>Kablosuz ağ bilgileriniz şöyle ayarlandı :</p>
     <span class="saveCredentialsSSID">{{ ssid }}</span>
-    <p>Your device will now reboot and should be connected to your access point soon.</p>
+    <p>Bilir şimdi yeniden başlatılacak ve kablosuz ağınıza bağlanacaktır.</p>
   </div>
 {% endblock %}
